2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Misc cleanups and fixes.
	* irq/Makefile.am: Misc cleanups and fixes.
	* start/Makefile.am: Misc cleanups and fixes.
	* startup/Makefile.am: Misc cleanups and fixes.
	* wrapup/Makefile.am: Misc cleanups and fixes.

2003-12-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Remove all: $(ARCH).
	* irq/Makefile.am: Remove all: $(ARCH).
	* startup/Makefile.am: Remove all: $(ARCH).
	* wrapup/Makefile.am: Remove all: $(ARCH).

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.
	* clock/Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* irq/Makefile.am: Add preinstallation dirstamp support.
	* startup/Makefile.am: Cosmetics.
	* timer/Makefile.am: Cosmetics.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove refs to non-existing files include/bspio.h and 
	include/uart.h.

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h, include/registers.h, irq/bsp_irq_asm.S,
	irq/bsp_irq_init.c, irq/irq.c, irq/irq.h, start/start.S,
	startup/bspstart.c, startup/exit.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.